@@ -6,6 +6,7 @@ Fixed bugs
 ----------
 
 - Components: Find set representatives before unifying components
+- Stuffing: Clear singleton columns for unique stuffings
 
 Build system
 ------------
